# safe-programming-with-rust

./: .gitignore  .test.rs.swp  README.md
a14a_struct/: Cargo.toml
a14a_struct/src/: main.rs
a14b_pilha/: Cargo.toml
a14b_pilha/src/: main.rs
a14c_troca_valores/: Cargo.toml
a14c_troca_valores/src/: main.rs
a15b/: Cargo.toml
a15b/src/: main.rs
a16_closure_order/: Cargo.toml
a16_closure_order/src/: main.rs
a22_cronograma/: Cargo.toml  cronograma_dados.json
a22_cronograma/src/: main.rs
a23_resstruturacao/: Cargo.toml
a23_resstruturacao/src/: main.rs
aula-borrow/: Cargo.toml
aula-lifetime/: Cargo.toml
aula-lifetime/src/: main.rs
aula-slice/: Cargo.toml
aula-slice/src/: main.rs
aula2-2/: Cargo.toml
aula2-2/src/: main.rs
aula2/src/: main.rs
aula3-2/: Cargo.toml
aula3-2/src/: main.rs
aula3-3/: Cargo.toml
aula3-3/src/: main.rs
aula3-4/: Cargo.toml
aula3-4/src/: main.rs
aula3/src/: main.rs
basic_login/src/: main.rs
biblioteca/: Cargo.toml  teste.json
biblioteca/src/: biblioteca.rs  errors.rs  main.rs  util.rs
biblioteca/src/biblioteca/: emprestimo.rs  livro.rs  usuario.rs
exercicio_modulos/src/: main.rs
first_word/src/: main.rs
hw1/src/: main.rs
hw2/src/: main.rs
mod-class/: Cargo.toml  main.rs
mod-class/math/: mod.rs
sala-paralelepipedo/: Cargo.toml
sala-paralelepipedo/src/: main.rs
test-trait/src/: main.rs
test_gen_traits_library/: Cargo.toml
test_thread1/: Cargo.toml
test_traits_book_video/: Cargo.toml
teste_enum/: Cargo.toml
teste_option/: Cargo.toml
zoo/: Cargo.toml  animais.json
(+17 files in other folders)
