[package]
name = "biblioteca"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.16.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.1.8", features = ["derive"] }

[dev-dependencies]
tempfile = "3.19.1"

